# MCP-Bridge

./: .gitignore  Dockerfile  README.md  compose.yml  docker-bake.hcl  pyproject.toml  requirements.txt  test.py
.github/: FUNDING.yml  release.yaml
.github/workflows/: release.yaml
charts/mcp-bridge/: Chart.yaml  values.yaml
charts/mcp-bridge/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  service.yaml
docs/: README.md  config.md  terminology.md  usecases.md
mcp_bridge/: config.py  endpoints.py  lifespan.py  main.py  mcp_endpoints.py  openapi_tags.py
mcp_bridge/config/: __init__.py  file.py  final.py  http.py  initial.py
mcp_bridge/health/: __init__.py  manager.py  router.py  types.py
mcp_bridge/mcpManagement/: prompts.py  resources.py  router.py  server.py  tools.py
mcp_bridge/mcp_clients/: AbstractClient.py  ClientInstance.py  DockerClient.py  KubernetesClient.py  McpClientManager.py  SseClient.py  StdioClient.py  StdioClientFactory.py  session.py
mcp_bridge/mcp_clients/transports/: docker.py  kubernetes.py
mcp_bridge/mcp_server/: __init__.py  server.py  sse.py  sse_transport.py
mcp_bridge/models/: __init__.py  chatCompletionStreamResponse.py  mcpServerStatus.py
mcp_bridge/openai_clients/: __init__.py  chatCompletion.py  completion.py  genericHttpxClient.py  streamChatCompletion.py  utils.py
mcp_bridge/sampling/: modelSelector.py  sampler.py
mcp_bridge/tool_mappers/: __init__.py  mcp2openaiConverters.py  openai2mcpConverters.py
